[package]
name = "redis-module-shim"
version = "0.1.0"
authors = ["Billy J Rhoades II <me@brod.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-module = "0.10"
tempfile = "3"
failure = "0.1.8"

base64 = "0.13"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"

[lib]
crate-type = ["cdylib"]
