[package]
name = "redis-loadmodbytes"
version = "0.1.2"
authors = ["Billy J Rhoades II <me@brod.es>"]
edition = "2018"
license = "MIT"
description = "redis module that allows loading modules from command without server access"
keywords = ["redis", "redis-module", "module", "hotload", "dynamic"]
repository = "https://github.com/brhoades/redis-loadmodbytes"
readme = "README.md"

[dependencies]
tempfile = "3"
base64 = "0.13"

failure = "0.1.8"
redis-module = { version = "0.11" }

[lib]
crate-type = ["cdylib"]
